--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,7 @@ body,
 ::-webkit-scrollbar-thumb {
     @apply bg-sky-900 rounded-xl;
 }
+
+.task > ::-webkit-scrollbar-thumb {
+    @apply bg-sky-500 rounded-xl;
+}
